--- a/src/main/resources/versicherung/Views/Dashboard.fxml
+++ b/src/main/resources/versicherung/Views/Dashboard.fxml
@@ -389,7 +389,7 @@
                         </StackPane>
                      </children>
                   </VBox>
-                  <VBox fx:id="sceneMitarbeitern" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" styleClass="container" stylesheets="@../css/styles.css">
+                  <VBox fx:id="sceneMitarbeitern" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" styleClass="container" stylesheets="@../css/styles.css" visible="false">
                      <children>
                         <StackPane fx:id="sceneMitarbeiter_stackpane" prefHeight="150.0" prefWidth="200.0">
                            <children>
@@ -569,11 +569,11 @@
                         </StackPane>
                      </children>
                   </VBox>
-                  <VBox fx:id="sceneVersicherung" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" styleClass="container" stylesheets="@../css/styles.css" visible="false">
+                  <VBox fx:id="sceneVersicherung" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" styleClass="container" stylesheets="@../css/styles.css">
                      <children>
                         <StackPane fx:id="sceneVersicherung_stackpane" prefHeight="150.0" prefWidth="200.0">
                            <children>
-                              <HBox fx:id="sceneVersicherung_buttons" alignment="CENTER" prefHeight="100.0" prefWidth="220.0" spacing="20.0">
+                              <HBox fx:id="sceneVersicherung_buttons" alignment="CENTER" prefHeight="100.0" prefWidth="220.0" spacing="20.0" visible="false">
                                  <children>
                                     <Button fx:id="sceneVersicherung_button_vertraege_auflisten" mnemonicParsing="false" onAction="#handleSceneVersicherungButtonClicks" prefHeight="100.0" prefWidth="100.0" text="Alle Vertraege auflisten" textAlignment="CENTER" wrapText="true" />
                                     <Button fx:id="sceneVersicherung_button_vertraege_erstellen" mnemonicParsing="false" onAction="#handleSceneVersicherungButtonClicks" prefHeight="100.0" prefWidth="100.0" text="Neue Vertraege erstellen" textAlignment="CENTER" wrapText="true" />
@@ -620,79 +620,65 @@
                                     </HBox>
                                  </children>
                               </VBox>
-                              <VBox fx:id="sceneVersicherung_neueVertraege_erstellen" alignment="CENTER" fillWidth="false" prefHeight="200.0" prefWidth="100.0" visible="false">
+                              <VBox fx:id="sceneVersicherung_neueVertraege_erstellen" alignment="CENTER" fillWidth="false" prefHeight="200.0" prefWidth="100.0">
                                  <children>
                                     <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="360.0" spacing="15.0">
                                        <children>
-                                          <Label text="Vorname">
+                                          <Label prefHeight="27.0" prefWidth="225.0" text="Person Ausweisnum.">
                                              <font>
                                                 <Font size="18.0" />
                                              </font>
                                           </Label>
-                                          <TextField fx:id="sceneKunden_neueKunden_field_vorname1" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" styleClass="textfield" stylesheets="@../css/styles.css" HBox.hgrow="ALWAYS">
+                                          <TextField fx:id="sceneVersicherung_neueVertraege_field_personausweisnummer" alignment="CENTER" prefHeight="27.0" prefWidth="182.0" styleClass="textfield" stylesheets="@../css/styles.css" HBox.hgrow="ALWAYS">
                                              <HBox.margin>
-                                                <Insets bottom="4.0" left="55.0" />
+                                                <Insets bottom="4.0" left="5.0" />
                                              </HBox.margin>
                                           </TextField>
                                        </children>
                                     </HBox>
                                     <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="360.0" spacing="15.0">
                                        <children>
-                                          <Label text="Nachname">
+                                          <Label text="Person Typ">
                                              <font>
                                                 <Font size="18.0" />
                                              </font>
                                           </Label>
-                                          <TextField fx:id="sceneKunden_neueKunden_field_nachname1" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" styleClass="textfield" stylesheets="@../css/styles.css" HBox.hgrow="ALWAYS">
+                                          <ComboBox fx:id="sceneVersicherung_neueVertraege_combobox_persontyp" editable="true" prefWidth="150.0">
                                              <HBox.margin>
-                                                <Insets bottom="4.0" left="44.0" />
+                                                <Insets left="100.0" />
                                              </HBox.margin>
-                                          </TextField>
+                                          </ComboBox>
                                        </children>
                                     </HBox>
                                     <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="360.0" spacing="15.0">
                                        <children>
-                                          <Label text="Ausweisnummer">
+                                          <Label text="Versicherungs Typ">
                                              <font>
                                                 <Font size="18.0" />
                                              </font>
                                           </Label>
-                                          <TextField fx:id="sceneKunden_neueKunden_field_ausweisnummer1" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" styleClass="textfield" stylesheets="@../css/styles.css" HBox.hgrow="ALWAYS">
+                                          <ComboBox fx:id="sceneVersicherung_neueVertraege_combobox_versicherungstyp" editable="true" prefWidth="150.0">
                                              <HBox.margin>
-                                                <Insets bottom="4.0" />
+                                                <Insets left="40.0" />
                                              </HBox.margin>
-                                          </TextField>
-                                       </children>
-                                       <VBox.margin>
-                                          <Insets />
-                                       </VBox.margin>
-                                    </HBox>
-                                    <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="360.0" spacing="15.0">
-                                       <children>
-                                          <Label text="Geburstdatum">
-                                             <font>
-                                                <Font size="18.0" />
-                                             </font>
-                                          </Label>
-                                          <TextField fx:id="sceneKunden_neueKunden_field_geburstdatum1" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" promptText="dd/mm/yyyy" styleClass="textfield" stylesheets="@../css/styles.css" HBox.hgrow="ALWAYS">
-                                             <HBox.margin>
-                                                <Insets bottom="4.0" left="16.0" />
-                                             </HBox.margin>
-                                          </TextField>
+                                          </ComboBox>
                                        </children>
                                     </HBox>
                                     <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="360.0" spacing="15.0">
                                        <children>
-                                          <Label text="Telefonnummer">
+                                          <Label text="Start Datum">
                                              <font>
                                                 <Font size="18.0" />
                                              </font>
-                                          </Label>
-                                          <TextField fx:id="sceneKunden_neueKunden_field_telefonnummer1" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" styleClass="textfield" stylesheets="@../css/styles.css" HBox.hgrow="ALWAYS">
                                              <HBox.margin>
-                                                <Insets bottom="4.0" left="2.0" />
+                                                <Insets top="10.0" />
                                              </HBox.margin>
-                                          </TextField>
+                                          </Label>
+                                          <DatePicker fx:id="sceneVersicherung_neueVertraege_datepicker_startdatum" prefHeight="19.0" prefWidth="174.0">
+                                             <HBox.margin>
+                                                <Insets left="70.0" />
+                                             </HBox.margin>
+                                          </DatePicker>
                                        </children>
                                        <VBox.margin>
                                           <Insets />
@@ -700,22 +686,22 @@
                                     </HBox>
                                     <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="360.0" spacing="15.0">
                                        <children>
-                                          <Label text="Adresse">
+                                          <Label text="End Datum">
                                              <font>
                                                 <Font size="18.0" />
                                              </font>
                                           </Label>
-                                          <TextField fx:id="sceneKunden_neueKunden_field_adresse1" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" styleClass="textfield" stylesheets="@../css/styles.css" HBox.hgrow="ALWAYS">
+                                          <DatePicker fx:id="sceneVersicherung_neueVertraege_datepicker_startdatum1" prefHeight="19.0" prefWidth="174.0">
                                              <HBox.margin>
-                                                <Insets bottom="4.0" left="65.0" />
+                                                <Insets left="78.0" />
                                              </HBox.margin>
-                                          </TextField>
+                                          </DatePicker>
                                        </children>
                                     </HBox>
                                     <HBox alignment="CENTER_RIGHT" prefWidth="360.0" spacing="10.0">
                                        <children>
                                           <Button mnemonicParsing="false" onAction="#handleBackToVersicherungClick" prefHeight="50.0" prefWidth="81.0" text="Back" />
-                                          <Button mnemonicParsing="false" onAction="#handleErstellenNeueKundenClick" prefHeight="50.0" prefWidth="81.0" text="Erstellen">
+                                          <Button mnemonicParsing="false" onAction="#handleErstellenNeueVersicherungsVertraegeClick" prefHeight="50.0" prefWidth="81.0" text="Erstellen">
                                              <VBox.margin>
                                                 <Insets top="10.0" />
                                              </VBox.margin>
@@ -730,7 +716,7 @@
                                     </HBox>
                                  </children>
                               </VBox>
-                              <VBox fx:id="sceneVersicherung_VersicherungsTypen" alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                              <VBox fx:id="sceneVersicherung_VersicherungsTypen" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" visible="false">
                                  <children>
                                     <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="360.0" spacing="15.0">
                                        <children>
