--- a/src/main/resources/versicherung/Views/Dashboard.fxml
+++ b/src/main/resources/versicherung/Views/Dashboard.fxml
@@ -418,7 +418,7 @@
                                           <Insets left="20.0" />
                                        </VBox.margin>
                                     </HBox>
-                                    <TableView fx:id="sceneVersicherung_alleVertraege_table" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                                    <TableView fx:id="sceneMitarbeiter_alleMitarbeiter_table" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                                        <columns>
                                           <TableColumn fx:id="sceneMitarbeiter_alleMitarbeiter_table_column_id" prefWidth="46.0" text="Nr." />
                                           <TableColumn fx:id="sceneMitarbeiter_alleMitarbeiter_table_column_ausweisNummer" prefWidth="115.0" text="AusweisNummer" />
@@ -569,15 +569,6 @@
                         </StackPane>
                      </children>
                   </VBox>
-                  <VBox fx:id="sceneUberuns" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" styleClass="container" stylesheets="@../css/styles.css" visible="false">
-                     <children>
-                        <Label text="Über uns">
-                           <font>
-                              <Font size="51.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </VBox>
                   <VBox fx:id="sceneVersicherung" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" styleClass="container" stylesheets="@../css/styles.css">
                      <children>
                         <StackPane fx:id="sceneVersicherung_stackpane" prefHeight="150.0" prefWidth="200.0">
@@ -616,8 +607,8 @@
                                           <TableColumn fx:id="sceneVersicherung_alleVertraege_table_column_nachName" prefWidth="119.0" text="Nachname" />
                                           <TableColumn fx:id="sceneVersicherung_alleVertraege_table_column_ausweisNummer" prefWidth="103.0" text="Ausweisnummer" />
                                           <TableColumn fx:id="sceneVersicherung_alleVertraege_table_column_persontyp" prefWidth="66.0" text="Role" />
-                                          <TableColumn fx:id="sceneVersicherung_alleVertraege_table_column_startdatum" prefWidth="99.0" text="Startdatum" />
-                                          <TableColumn fx:id="sceneVersicherung_alleVertraege_table_column_enddatum" prefWidth="204.0" text="Enddatum" />
+                                          <TableColumn fx:id="sceneVersicherung_alleVertraege_table_column_startDatum" prefWidth="99.0" text="Startdatum" />
+                                          <TableColumn fx:id="sceneVersicherung_alleVertraege_table_column_endDatum" prefWidth="204.0" text="Enddatum" />
                                        </columns>
                                        <VBox.margin>
                                           <Insets left="6.0" right="6.0" top="6.0" />
@@ -626,7 +617,7 @@
                                     <HBox alignment="CENTER" prefHeight="62.0" prefWidth="665.0" spacing="10.0">
                                        <children>
                                           <Button mnemonicParsing="false" onAction="#handleBackToVersicherungClick" prefHeight="31.0" prefWidth="78.0" text="Back" />
-                                          <Button disable="true" mnemonicParsing="false" onAction="#handleLoeschenVersicherungsVertraegeClick" prefHeight="31.0" prefWidth="78.0" text="Löschen" />
+                                          <Button fx:id="sceneVersicherung_alleVertraege_button_delete" disable="true" mnemonicParsing="false" onAction="#handleLoeschenVersicherungsVertraegeClick" prefHeight="31.0" prefWidth="78.0" text="Löschen" />
                                        </children>
                                     </HBox>
                                  </children>
@@ -766,6 +757,15 @@
                               </VBox>
                            </children>
                         </StackPane>
+                     </children>
+                  </VBox>
+                  <VBox fx:id="sceneUberuns" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" styleClass="container" stylesheets="@../css/styles.css" visible="false">
+                     <children>
+                        <Label text="Über uns">
+                           <font>
+                              <Font size="51.0" />
+                           </font>
+                        </Label>
                      </children>
                   </VBox>
                </children>
