Searching by name for all mitarbeiter and versicherungsvertraege list

--- a/src/main/resources/versicherung/Views/Dashboard.fxml
+++ b/src/main/resources/versicherung/Views/Dashboard.fxml
@@ -589,7 +589,7 @@
                                                 <Font size="15.0" />
                                              </font>
                                           </Label>
-                                          <TextField fx:id="field_id21" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" promptText="Name...." styleClass="textfield" stylesheets="@../css/styles.css">
+                                          <TextField fx:id="sceneVersicherung_alleVertraege_field_name" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" promptText="Name...." styleClass="textfield" stylesheets="@../css/styles.css">
                                              <HBox.margin>
                                                 <Insets bottom="4.0" />
                                              </HBox.margin>
