--- a/src/main/resources/versicherung/Views/Dashboard.fxml
+++ b/src/main/resources/versicherung/Views/Dashboard.fxml
@@ -580,7 +580,7 @@
                                     <Button fx:id="sceneVersicherung_button_typen_bearbeiten" mnemonicParsing="false" onAction="#handleSceneVersicherungButtonClicks" prefHeight="100.0" prefWidth="100.0" text="Versicherungs-Typen bearbeiten" textAlignment="CENTER" wrapText="true" />
                                  </children>
                               </HBox>
-                              <VBox fx:id="sceneVersicherung_alleVertraege" alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                              <VBox fx:id="sceneVersicherung_alleVertraege" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" visible="false">
                                  <children>
                                     <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="360.0" spacing="15.0">
                                        <children>
@@ -718,7 +718,7 @@
                                     </HBox>
                                  </children>
                               </VBox>
-                              <VBox fx:id="sceneVersicherung_VersicherungsTypen" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" visible="false">
+                              <VBox fx:id="sceneVersicherung_VersicherungsTypen" alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                                  <children>
                                     <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="360.0" spacing="15.0">
                                        <children>
@@ -727,7 +727,7 @@
                                                 <Font size="15.0" />
                                              </font>
                                           </Label>
-                                          <TextField fx:id="field_id211" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" promptText="Typ..." styleClass="textfield" stylesheets="@../css/styles.css">
+                                          <TextField fx:id="sceneVersicherung_VersicherungsTypen_field_name" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" promptText="Typ..." styleClass="textfield" stylesheets="@../css/styles.css">
                                              <HBox.margin>
                                                 <Insets bottom="4.0" />
                                              </HBox.margin>
